修改文件: 算法导论动态规划学习.md

--- a/算法导论动态规划学习.md
+++ b/算法导论动态规划学习.md
@@ -107,11 +107,11 @@ s:
 
 同之前的矩阵链乘法问题相似，还是要建立最优解的递归式。
 
-![](http://xinqiu.me/2016/10/04/CLRS-2/3.png)
+![](./images/1497255574273.jpg)
 
 书中的图15-8很形象,列举出了X=[A, B, C, B, D, A, B], Y=[B, D, C, A, B, A]得到的表c和表b。
 
-![](http://xinqiu.me/2016/10/04/CLRS-2/4.png)
+![](./images/1497255574368.jpg)
 
 ```
 def LCSLength(x, y):
